feat: use typesense-write-conn for data loading workflows
- Update workflows to use typesense-write-conn secret
- Add create_search_key.py script to generate scoped search-only keys
- Add development.md documentation for local development access

--- a/.github/workflows/typesense-daily-load.yml
+++ b/.github/workflows/typesense-daily-load.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+          secret_name: typesense-write-conn
 
       - name: Set up Python
         uses: actions/setup-python@v5
