--- a/.github/workflows/test-local.yml
+++ b/.github/workflows/test-local.yml
@@ -21,12 +21,12 @@ jobs:
           - 8108:8108
         env:
           TYPESENSE_API_KEY: test_api_key
-          TYPESENSE_DATA_DIR: /data
+          TYPESENSE_DATA_DIR: /tmp
         options: >-
           --health-cmd "curl -f http://localhost:8108/health || exit 1"
           --health-interval 10s
           --health-timeout 5s
-          --health-retries 5
+          --health-retries 10
 
     steps:
       - name: Checkout code
